--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,4 @@ ipykernel>=6.25.0
 # Optional: ML and advanced analytics
 optuna>=3.2.0  # Hyperparameter optimization
 ta-lib>=0.4.0  # Technical analysis (requires separate install)
+requests-oauthlib>=2.0.0
