🚀 Alert System + Automation Scripts!
TIER 1 FEATURES: ALL COMPLETE! ✅

3️⃣ Alert System
- Email alerts (SMTP/Gmail)
- SMS alerts (Twilio)
- Telegram bot integration
- Daily digest emails
- High-confidence signal alerts (>90%)
- Test endpoint for setup

APIs:
- POST /api/alerts/test - Test alert config
- POST /api/alerts/check - Check & send alerts

4️⃣ Historical Backfill
- Script to backfill 2-5 years of data
- Chunks data into manageable batches
- SEC, Political, OpenInsider sources
- Auto-generates signals from historical data

Usage: python scripts/historical_backfill.py --years 2

5️⃣ Daily Automated Updates
- Complete daily update script
- Ingests new data from all sources
- Generates fresh signals
- Evaluates signal performance
- Sends alerts + daily digest

Usage: python scripts/daily_update.py
Cron: 0 6 * * * cd /path && ./venv/bin/python scripts/daily_update.py

PROGRESS: 8/11 Features Complete!
Remaining: 3 quick UI enhancements

The system is now FULLY AUTOMATED! 🎯

--- a/config/api_keys_template.env
+++ b/config/api_keys_template.env
@@ -50,3 +50,20 @@ DATABASE_URL=sqlite:///data/trading_app.db
 FLASK_SECRET_KEY=your-secret-key-here
 DEBUG=True
 
+
+# Alert System Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+ALERT_EMAIL=alerts@youremail.com
+
+# Twilio SMS
+TWILIO_ACCOUNT_SID=your_twilio_sid
+TWILIO_AUTH_TOKEN=your_twilio_token
+TWILIO_PHONE_NUMBER=+1234567890
+ALERT_PHONE_NUMBER=+1234567890
+
+# Telegram
+TELEGRAM_BOT_TOKEN=your_bot_token
+TELEGRAM_CHAT_ID=your_chat_id
